--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,40 @@
-theme: jekyll-theme-cayman
+title: Malaysian Students' Technology Conference - MSTC
+description: > # this means to ignore newlines until "baseurl:"
+  The Malaysian Students' Technology Conference (MSTC) is a student-led initiative that serves to provide 
+  a platform for students to critically discuss and learn more about present-era technological advances 
+  and issues regarding STEM topics.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://mstc19.github.io" # the base hostname & protocol for your site
+# Build settings
+markdown: kramdown
+
+facebook:
+  app_id: 1616519665327266
+
+logo: "../css/2016_style/img/icon-large.png"
+
+social: 
+  name: Malaysian Students' Technology Conference - MSTC
+  link: "https://www.facebook.com/malaysianstudentstechnologyconference"
+
+google_site_verification: google3d1dfe2dc5cfa440.html
+
+# Google Analytics
+google_analytics: UA-122461300-1
+
+include: ['_2016_pages', '_2017_pages']
+
+plugins:
+  - jekyll-sitemap
+  - jekyll-seo-tag
+
+# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+social:
+  - title: facebook
+    url: https://www.facebook.com/malaysianstudentstechnologyconference/
+  - title: twitter
+    url: https://twitter.com/mstc_2018
+
+# Build settings
+markdown: kramdown
+permalink: pretty
